--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.3.0
   email_validator: ^2.1.17
   google_sign_in: ^6.0.2
+  like_button: ^2.0.5
 
 dev_dependencies:
   flutter_test:
