--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^4.3.0
   email_validator: ^2.1.17
   google_sign_in: ^6.0.2
+  google_maps_flutter: ^2.2.5
+  location: ^4.4.0
 
 dev_dependencies:
   flutter_test:
