--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   google_maps_flutter: ^2.2.5
   location: ^4.4.0
   like_button: ^2.0.5
+  fluttericon: ^2.0.0
+  weather_icons: ^3.0.0
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
